--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,9 +22,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  firebase_core: ^0.4.0+9
-  cloud_firestore: ^0.12.3
+  cupertino_icons: ^0.1.2 #Funciona
+  firebase_core: ^0.4.0+9 #Funciona
+  cloud_firestore: ^0.12.3 #Funciona
+  firebase_auth: ^0.14.0+5 #Funciona
+  #google_sign_in: ^4.0.4 #ERRO
+  dio: ^2.1.13 #Funciona
+  rxdart: ^0.22.0 #Funciona
+  bloc_pattern: ^2.2.3 #Funciona
+  progress_dialog: ^1.2.0 #Funciona
 
 dev_dependencies:
   flutter_test:
