--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   firebase_core: 0.4.0+9 #Funciona
   cloud_firestore: 0.12.3 #Funciona
   firebase_auth: 0.14.0+5 #Funciona
-  #google_sign_in: 4.0.4 #ERRO
+  google_sign_in: 4.0.4 #ERRO
   #dio: 2.1.13 #Funciona
   #rxdart: 0.22.0 #Funciona
   #bloc_pattern: 2.2.3 #Funciona
