--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   #rxdart: 0.22.0 #Funciona
   #bloc_pattern: 2.2.3 #Funciona
   progress_dialog: 1.2.0 #Funciona
+  flutter_masked_text: ^0.8.0
 
 dev_dependencies:
   flutter_test:
