Implementação do Darkmode

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@
 .pub-cache/
 .pub/
 /build/
+/pubspec.lock
+/android/app/google-services.json
+/ios/Runner/GoogleService-Info.plist
 
 # Android related
 **/android/**/gradle-wrapper.jar
@@ -71,5 +74,4 @@
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
-/android/app/google-services.json
-/ios/Runner/GoogleService-Info.plist
+
