--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,18 +10,21 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.2 #Funciona
+  cupertino_icons: ^0.1.2
 
-  firebase_core: ^0.4.0+9 #Funciona
-  cloud_firestore: ^0.12.3 #Funciona
-  firebase_auth: ^0.14.0+5 #Funciona
+  firebase_core: ^0.4.0+9
+  cloud_firestore: ^0.12.3
+  firebase_auth: ^0.14.0+5
   google_sign_in: ^4.0.4 #ERRO
   #dio: 2.1.13 #Funciona
   #rxdart: 0.22.0 #Funciona
   #bloc_pattern: 2.2.3 #Funciona
-  progress_dialog: ^1.2.0 #Funciona
+  progress_dialog: ^1.2.0
   flutter_masked_text: ^0.8.0
   shared_preferences: ^0.5.3
+  image_picker: ^0.6.4
+  firebase_storage: ^3.0.3
+  path_provider: 1.5.0
 
 dev_dependencies:
   flutter_test:
