--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,6 +26,12 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Adicionar iamgem no perfil</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Adicionar imagem no perfil</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Acessar microfones</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
