--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,6 @@
 .pub/
 /build/
 /pubspec.lock
-/android/app/google-services.json
-/ios/Runner/GoogleService-Info.plist
 
 # Android related
 **/android/**/gradle-wrapper.jar
@@ -41,6 +39,8 @@
 **/android/gradlew.bat
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
+
+/android/app/google-services.json
 
 # iOS/XCode related
 **/ios/**/*.mode1v3
@@ -68,6 +68,10 @@
 **/ios/Flutter/flutter_export_environment.sh
 **/ios/ServiceDefinitions.json
 **/ios/Runner/GeneratedPluginRegistrant.*
+**/ios/Podfile
+**/ios/Podfile.lock
+
+/ios/Runner/GoogleService-Info.plist
 
 # Exceptions to above rules.
 !**/ios/**/default.mode1v3
@@ -75,4 +79,3 @@
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
-
