--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   image_picker: ^0.6.4
   firebase_storage: ^3.0.3
   path_provider: 1.5.0
+  photo_view: ^0.9.2
 
 dev_dependencies:
   flutter_test:
