--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,20 +12,30 @@ dependencies:
 
   cupertino_icons: ^0.1.2
 
-  firebase_core: ^0.4.0+9
-  cloud_firestore: ^0.12.3
-  firebase_auth: ^0.14.0+5
-  google_sign_in: ^4.0.4 #ERRO
-  #dio: 2.1.13 #Funciona
-  #rxdart: 0.22.0 #Funciona
-  #bloc_pattern: 2.2.3 #Funciona
-  progress_dialog: ^1.2.0
-  flutter_masked_text: ^0.8.0
-  shared_preferences: ^0.5.3
+  # [Firebase]
+  firebase_core: ^0.4.4+3
+  firebase_auth: ^0.15.5+3
+  cloud_firestore: ^0.13.4+2
+  firebase_storage: ^3.1.5
+
+  # [Widgets]
+  progress_dialog: ^1.2.1
   image_picker: ^0.6.4
-  firebase_storage: ^3.0.3
-  path_provider: 1.5.0
   photo_view: ^0.9.2
+
+  # [Outros]
+  google_sign_in: ^4.3.0
+  dio: ^3.0.9
+  flutter_masked_text: ^0.8.0
+  cpf_cnpj_validator: ^1.0.5
+  shared_preferences: ^0.5.6+3
+  path_provider: ^1.5.1
+  url_launcher: ^5.4.2
+
+  # [Mapa]
+  #flutter_map: ^0.8.2
+  #latlong: ^0.6.1
+  #location: ^3.0.1
 
 dev_dependencies:
   flutter_test:
