--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,9 @@
 
 /ios/Runner/GoogleService-Info.plist
 
+# Web related
+lib/generated_plugin_registrant.dart
+
 # Exceptions to above rules.
 !**/ios/**/default.mode1v3
 !**/ios/**/default.mode2v3
