--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_auth: ^0.15.5+3
   cloud_firestore: ^0.13.4+2
   firebase_storage: ^3.1.5
+  firebase_messaging: ^6.0.13
 
   # [Widgets]
   progress_dialog: ^1.2.1
