--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -22,16 +22,21 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Adicionar imagem no perfil</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Acessar microfones</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Adicionar iamgem no perfil</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>Adicionar iamgem no perfil</string>
-    <key>NSCameraUsageDescription</key>
-    <string>Adicionar imagem no perfil</string>
-    <key>NSMicrophoneUsageDescription</key>
-    <string>Acessar microfones</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
