--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   progress_dialog: ^1.2.1
   image_picker: ^0.6.4
   photo_view: ^0.9.2
+  flutter_local_notifications: ^1.4.0
 
   # [Outros]
   google_sign_in: ^4.3.0
