--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   image_picker: ^0.6.4
   photo_view: ^0.9.2
   flutter_local_notifications: ^1.4.0
+  flutter_slidable: ^0.5.4
 
   # [Outros]
   google_sign_in: ^4.3.0
