--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: default_app_flutter
 description: Default App Flutter
-
+autor: Cássio Meira Silva
 version: 1.0.0+1
 
 environment:
@@ -26,6 +26,8 @@ dependencies:
   flutter_local_notifications: ^1.4.0
   flutter_slidable: ^0.5.4
 
+  font_awesome_flutter: ^8.8.1
+
   # [Outros]
   google_sign_in: ^4.3.0
   dio: ^3.0.9
@@ -34,6 +36,9 @@ dependencies:
   shared_preferences: ^0.5.6+3
   path_provider: ^1.5.1
   url_launcher: ^5.4.2
+
+  package_info: ^0.4.0+17
+  logger: ^0.9.1
 
   # [Mapa]
   #flutter_map: ^0.8.2
